# tatowiki

./: .gitignore  CMakeLists.txt  COPYING.TXT  README.md  config.js
app/: CMakeLists.txt  config.js
app/conf/: init.d.debian  lighttpd-sample.conf  nginx-sample.conf
app/data/css/layouts/: default.css
app/locale/de/LC_MESSAGES/: messages.po
app/locale/es/LC_MESSAGES/: messages.po
app/locale/fr/LC_MESSAGES/: messages.mo  messages.po
app/locale/it/LC_MESSAGES/: messages.mo
app/locale/ja/LC_MESSAGES/: messages.po
app/locale/pl/LC_MESSAGES/: messages.mo  messages.po
app/locale/pt/LC_MESSAGES/: messages.mo
app/locale/ru/LC_MESSAGES/: messages.mo
app/locale/zh_CN/LC_MESSAGES/: messages.mo  messages.po
app/resources/commons/js/: check_translation.js  toc.js
app/resources/css/articles/: create.css
app/resources/css/pages/: index.css
app/resources/css/users/: login.css  register-new.css
app/resources/js/: diffpage.js
app/resources/skins/responsive/css/articles/: create.css
app/resources/skins/responsive/css/layouts/: default.css
app/resources/skins/responsive/js/: check_translation.js  mardown_editor.js
app/resources/skins/tatoeba/css/layouts/: default.css
app/resources/skins/tatoeba/css/users/: login.css
app/sql/: 0.19.0.sql  sqlite3.sql
app/src/: TatoWiki.cpp  TatoWiki.h  main.cpp
app/src/contents/: Admin.h  Articles.h  BaseContent.h  Css.h  History.h  Img.h  Media.h  Pages.h  Search.h  Users.h
app/src/contents/ajax/: Media.h
app/src/contents/forms/: base_articles_form.h  change_brand.h  change_password.h  change_user_password.h  create.h  diff_between.h  edit.h  login.h  register.h  register_new.h  simple.h  translate.h  upload_image.h
app/src/controllers/webs/: Admin.cpp  Admin.h  Articles.cpp  Articles.h  Css.cpp  Css.h  History.cpp  History.h  Img.cpp  Img.h  Media.cpp  Media.h  Pages.cpp  Pages.h  Search.cpp  Search.h  Users.cpp  Users.h
app/src/generics/: Config.cpp  Config.h  markdown.cpp  markdown.h
app/src/models/: Articles.cpp  Articles.h  History.cpp  History.h  Search.cpp  Search.h  Users.cpp  Users.h
app/src/results/: Articles.h  History.h  Wiki.h
app/src/views/ajax/layouts/: json.tmpl
app/src/views/ajax/media/: upload_image.tmpl
app/src/views/webs/articles/: create.tmpl  delete.tmpl  edit.tmpl  remove.tmpl  show.tmpl  show_all.tmpl  show_conflict.tmpl  translate.tmpl
app/src/views/webs/commons/: commons.tmpl
app/src/views/webs/commons/admin/: change_brand.tmpl  change_user_password.tmpl
app/src/views/webs/commons/articles/: create.tmpl  edit.tmpl  show.tmpl  show_all.tmpl  show_conflict.tmpl  translate.tmpl
app/src/views/webs/commons/history/: all_versions_of.tmpl  diff_between.tmpl  recent_changes.tmpl  revert_to_version.tmpl  show_diff_between.tmpl  show_version.tmpl
app/src/views/webs/commons/layouts/: article_edition.tmpl  master.tmpl
app/src/views/webs/commons/media/: list_all.tmpl  upload_image.tmpl
app/src/views/webs/commons/search/: result.tmpl  simple.tmpl
app/src/views/webs/commons/users/: change_password.tmpl  login.tmpl  register_new.tmpl
app/src/views/webs/history/: all_versions_of.tmpl  recent_changes.tmpl  show_diff_between.tmpl  show_version.tmpl
app/src/views/webs/layouts/: article_edition.tmpl  master.tmpl
app/src/views/webs/media/: upload_image.tmpl
app/src/views/webs/responsive/admin/: change_brand.tmpl
app/src/views/webs/responsive/articles/: create.tmpl  edit.tmpl  show.tmpl  show_all.tmpl  show_conflict.tmpl  translate.tmpl
app/src/views/webs/responsive/history/: all_versions_of.tmpl  diff_between.tmpl  recent_changes.tmpl  revert_to_version.tmpl  show_diff_between.tmpl  show_version.tmpl
app/src/views/webs/responsive/layouts/: article_edition.tmpl  master.tmpl
app/src/views/webs/responsive/media/: list_all.tmpl  upload_image.tmpl
app/src/views/webs/responsive/search/: result.tmpl  simple.tmpl
app/src/views/webs/responsive/users/: change_password.tmpl  login.tmpl  register_new.tmpl
app/src/views/webs/tatoeba/admin/: change_brand.tmpl  change_user_password.tmpl
app/src/views/webs/tatoeba/articles/: show.tmpl  show_all.tmpl  show_conflict.tmpl
app/src/views/webs/tatoeba/history/: all_versions_of.tmpl  recent_changes.tmpl  show_diff_between.tmpl  show_version.tmpl
app/src/views/webs/tatoeba/layouts/: article_edition.tmpl  master.tmpl
app/src/views/webs/tatoeba/media/: list_all.tmpl  upload_image.tmpl
app/src/views/webs/tatoeba/search/: result.tmpl  simple.tmpl
app/src/views/webs/tatoeba/users/: login.tmpl  register_new.tmpl
app/src/views/webs/users/: change_password.tmpl  login.tmpl  logout.tmpl  register.tmpl  register_new.tmpl
app/tests/functionnal/: README  create_article.py  create_user.py  delete_article.py  httpclient.py  needs_login.py  translate_article.py
app/tests/models/Articles/: fill_articles.sql  table_structure_check.sql
app/tests/models/Articles/add_to_group/: add_to_group.cpp
app/tests/models/Articles/articles/: articles.cpp
app/tests/models/Articles/create_from_lang_and_slug/: create_from_lang_and_slug.cpp
app/tests/models/Articles/edit_from_lang_and_slug/: edit_from_lang_and_slug.cpp
app/tests/models/Articles/get_from_id/: get_from_id.cpp
app/tests/models/Articles/get_from_lang_and_slug/: get_from_lang_and_slug.cpp
app/tests/models/Articles/get_group_id_from_lang_and_slug/: get_group_id_from_lang_and_slug.cpp
app/tests/models/articles/: add_to_group.cpp  add_translation_link.cpp  articles.cpp  create_from_lang_and_slug.cpp  edit_from_lang_and_slug.cpp  fill_articles.sql  get_from_id.cpp  get_from_lang_and_slug.cpp  get_group_id_from_lang_and_slug.cpp  test.h
app/tools/: update_locales.sh
app/upload/: README.txt
local_template/: controller_construct.tpl
local_template/contents/: _action_content_.tpl  _controller_content.tpl  (+1 more)
src/: main.cpp  tatowiki.cpp  tatowiki.h
tools/: addActionOnlyPage.py  addController.py  addForm.py  addFormPage.py  addMethod.py  addModel.py  architecture.py  config.py  config.py.example  constants.py  create_new_cppcmsskel.py  init.py  linkModelController.py  utils.py
(+26 files in other folders)
